2. Codigo Fuente/StructFile/gen/Languaje/Grammar/StructFileGrammarParser.java
// Generated from C:/Users/acer/Google Drive/CESAR/6. PORTAFOLIO/StructFile/StructFile/src/Languaje/Grammar\StructFileGrammar.g4 by ANTLR 4.7.2
package Languaje.Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StructFileGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ONELINECOMMENT=1, MULTILINECOMMENT=2, SPACES=3, TK_NUMBER=4, TK_TEXT=5, 
		TK_BOOLEAN=6, TK_FILE=7, TK_LIST=8, TK_TREE=9, TK_GROUP=10, TK_IF=11, 
		TK_ELSE=12, TK_SWITCH=13, TK_BREAK=14, TK_CONTINUE=15, TK_WHILE=16, TK_DO=17, 
		TK_FOR=18, TK_RETURN=19, TK_DOUBLE_QUOTES=20, TK_SIMPLE_QUOTE=21, TK_DOT=22, 
		TK_COLON=23, TK_SEMICOLON=24, TK_COMMA=25, TK_OPEN_BRACKED=26, TK_CLOSE_BRACKED=27, 
		TK_OPEN_BRACES=28, TK_CLOSE_BRACES=29, TK_OPEN_SQUARE_BRACKED=30, TK_CLOSE_SQUARE_BRACKED=31, 
		TK_AND=32, TK_OR=33, TK_NOT=34, TK_GREAT_THAN=35, TK_GREAT_EQUAL_THAN=36, 
		TK_LESS_THAN=37, TK_LESS_EQUAL_THAN=38, TK_EQUAL=39, TK_NOT_EQUAL=40, 
		TK_SUM=41, TK_HIPHEN=42, TK_MULT=43, TK_DIVR=44, TK_MOD=45, TK_EXP=46, 
		TK_DIVI=47, TK_ASIGN=48, TK_DOLLAR=49, TK_DOUBLE_DOLLAR=50, TRUE_VAL=51, 
		FALSE_VAL=52, NUMBER_VAL=53, TEXT_VAL=54, FILE_VAL=55, ID=56, ID_DIR=57;
	public static final int
		RULE_init = 0, RULE_content = 1, RULE_tk_semicolon = 2, RULE_variableDef = 3, 
		RULE_type = 4, RULE_number = 5, RULE_boolean_ = 6, RULE_text_ = 7, RULE_file = 8, 
		RULE_list = 9, RULE_tree_ = 10, RULE_group = 11, RULE_id_variable = 12, 
		RULE_variableAsign = 13, RULE_tk_asign = 14, RULE_functionDef = 15, RULE_return_ = 16, 
		RULE_id_function = 17, RULE_tk_open_bracked = 18, RULE_parameters = 19, 
		RULE_add_variableDef = 20, RULE_tk_close_bracked = 21, RULE_tk_open_braces = 22, 
		RULE_functionContent = 23, RULE_add_functionContent = 24, RULE_tk_close_braces = 25, 
		RULE_functionCall = 26, RULE_call_parameters = 27, RULE_add_expression = 28, 
		RULE_structures = 29, RULE_if_ = 30, RULE_tk_if = 31, RULE_ifContent = 32, 
		RULE_add_ifContent = 33, RULE_else_ = 34, RULE_tk_else = 35, RULE_else_ifContent = 36, 
		RULE_add_else_ifContent = 37, RULE_switch_ = 38, RULE_tk_switch = 39, 
		RULE_caseContent = 40, RULE_add_caseContent = 41, RULE_case_ = 42, RULE_switchContent = 43, 
		RULE_add_switchContent = 44, RULE_default_ = 45, RULE_while_ = 46, RULE_tk_while = 47, 
		RULE_whileContent = 48, RULE_add_whileContent = 49, RULE_do_while = 50, 
		RULE_tk_do = 51, RULE_do_whileContent = 52, RULE_add_do_whileContent = 53, 
		RULE_for_ = 54, RULE_tk_for = 55, RULE_for_rules = 56, RULE_forContent = 57, 
		RULE_add_forContent = 58, RULE_return_call = 59, RULE_add_content = 60, 
		RULE_end = 61, RULE_value = 62, RULE_number_val = 63, RULE_text_val = 64, 
		RULE_boolean_val = 65, RULE_expression = 66, RULE_tk_and = 67, RULE_tk_or = 68, 
		RULE_tk_not = 69, RULE_tk_comparator = 70, RULE_tk_great_than = 71, RULE_tk_great_equal_than = 72, 
		RULE_tk_less_than = 73, RULE_tk_less_equal_than = 74, RULE_tk_equal = 75, 
		RULE_tk_not_equal = 76, RULE_tk_operator = 77, RULE_tk_sum = 78, RULE_tk_minus = 79, 
		RULE_tk_mult = 80, RULE_tk_divr = 81, RULE_tk_divi = 82, RULE_tk_mod = 83, 
		RULE_tk_exp = 84, RULE_tree_val = 85, RULE_id_dir = 86, RULE_tk_colon = 87, 
		RULE_direction = 88, RULE_file_or_division = 89, RULE_division = 90, RULE_tk_open_square_bracked = 91, 
		RULE_add_directions = 92, RULE_tk_comma = 93, RULE_tk_close_square_bracked = 94, 
		RULE_file_val = 95, RULE_group_val = 96, RULE_set_group = 97, RULE_add_group_vals = 98, 
		RULE_list_val = 99, RULE_add_expressions = 100, RULE_value_extras = 101, 
		RULE_method_reference = 102, RULE_separator = 103, RULE_tk_dollar = 104, 
		RULE_tk_double_dollar = 105, RULE_default_call = 106, RULE_id_function2 = 107, 
		RULE_call_default_parameters = 108, RULE_add_default_expression = 109;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "content", "tk_semicolon", "variableDef", "type", "number", "boolean_", 
			"text_", "file", "list", "tree_", "group", "id_variable", "variableAsign", 
			"tk_asign", "functionDef", "return_", "id_function", "tk_open_bracked", 
			"parameters", "add_variableDef", "tk_close_bracked", "tk_open_braces", 
			"functionContent", "add_functionContent", "tk_close_braces", "functionCall", 
			"call_parameters", "add_expression", "structures", "if_", "tk_if", "ifContent", 
			"add_ifContent", "else_", "tk_else", "else_ifContent", "add_else_ifContent", 
			"switch_", "tk_switch", "caseContent", "add_caseContent", "case_", "switchContent", 
			"add_switchContent", "default_", "while_", "tk_while", "whileContent", 
			"add_whileContent", "do_while", "tk_do", "do_whileContent", "add_do_whileContent", 
			"for_", "tk_for", "for_rules", "forContent", "add_forContent", "return_call", 
			"add_content", "end", "value", "number_val", "text_val", "boolean_val", 
			"expression", "tk_and", "tk_or", "tk_not", "tk_comparator", "tk_great_than", 
			"tk_great_equal_than", "tk_less_than", "tk_less_equal_than", "tk_equal", 
			"tk_not_equal", "tk_operator", "tk_sum", "tk_minus", "tk_mult", "tk_divr", 
			"tk_divi", "tk_mod", "tk_exp", "tree_val", "id_dir", "tk_colon", "direction", 
			"file_or_division", "division", "tk_open_square_bracked", "add_directions", 
			"tk_comma", "tk_close_square_bracked", "file_val", "group_val", "set_group", 
			"add_group_vals", "list_val", "add_expressions", "value_extras", "method_reference", 
			"separator", "tk_dollar", "tk_double_dollar", "default_call", "id_function2", 
			"call_default_parameters", "add_default_expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'num'", "'tex'", "'bol'", "'fil'", "'lis'", 
			"'dir'", "'gro'", "'if'", "'else'", "'switch'", "'break'", "'continue'", 
			"'while'", "'do'", "'for'", "'return'", "'\"'", "'''", "'.'", "':'", 
			"';'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'and'", "'or'", 
			"'not'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'^'", "'/_'", "'='", "'$'", "'$$'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ONELINECOMMENT", "MULTILINECOMMENT", "SPACES", "TK_NUMBER", "TK_TEXT", 
			"TK_BOOLEAN", "TK_FILE", "TK_LIST", "TK_TREE", "TK_GROUP", "TK_IF", "TK_ELSE", 
			"TK_SWITCH", "TK_BREAK", "TK_CONTINUE", "TK_WHILE", "TK_DO", "TK_FOR", 
			"TK_RETURN", "TK_DOUBLE_QUOTES", "TK_SIMPLE_QUOTE", "TK_DOT", "TK_COLON", 
			"TK_SEMICOLON", "TK_COMMA", "TK_OPEN_BRACKED", "TK_CLOSE_BRACKED", "TK_OPEN_BRACES", 
			"TK_CLOSE_BRACES", "TK_OPEN_SQUARE_BRACKED", "TK_CLOSE_SQUARE_BRACKED", 
			"TK_AND", "TK_OR", "TK_NOT", "TK_GREAT_THAN", "TK_GREAT_EQUAL_THAN", 
			"TK_LESS_THAN", "TK_LESS_EQUAL_THAN", "TK_EQUAL", "TK_NOT_EQUAL", "TK_SUM", 
			"TK_HIPHEN", "TK_MULT", "TK_DIVR", "TK_MOD", "TK_EXP", "TK_DIVI", "TK_ASIGN", 
			"TK_DOLLAR", "TK_DOUBLE_DOLLAR", "TRUE_VAL", "FALSE_VAL", "NUMBER_VAL", 
			"TEXT_VAL", "FILE_VAL", "ID", "ID_DIR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StructFileGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StructFileGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InitContext extends ParserRuleContext {
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public Add_contentContext add_content() {
			return getRuleContext(Add_contentContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TK_NUMBER) | (1L << TK_TEXT) | (1L << TK_BOOLEAN) | (1L << TK_FILE) | (1L << TK_LIST) | (1L << TK_TREE) | (1L << TK_GROUP) | (1L << TK_IF) | (1L << TK_SWITCH) | (1L << TK_WHILE) | (1L << TK_DO) | (1L << TK_FOR) | (1L << TK_RETURN) | (1L << TK_OPEN_BRACKED) | (1L << TK_OPEN_BRACES) | (1L << TK_OPEN_SQUARE_BRACKED) | (1L << TK_NOT) | (1L << TRUE_VAL) | (1L << FALSE_VAL) | (1L << NUMBER_VAL) | (1L << TEXT_VAL) | (1L << FILE_VAL) | (1L << ID) | (1L << ID_DIR))) != 0)) {
				{
				setState(220);
				content();
				setState(221);
				add_content();
				}
			}

			setState(225);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
	 
		public ContentContext() { }
		public void copyFrom(ContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Content7Context extends ContentContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Content7Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent7(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent7(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent7(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Content6Context extends ContentContext {
		public Return_callContext return_call() {
			return getRuleContext(Return_callContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Content6Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent6(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent6(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Content5Context extends ContentContext {
		public StructuresContext structures() {
			return getRuleContext(StructuresContext.class,0);
		}
		public Content5Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent5(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Content4Context extends ContentContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Content4Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent4(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Content3Context extends ContentContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public Content3Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Content2Context extends ContentContext {
		public VariableAsignContext variableAsign() {
			return getRuleContext(VariableAsignContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Content2Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Content1Context extends ContentContext {
		public VariableDefContext variableDef() {
			return getRuleContext(VariableDefContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public Content1Context(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).enterContent1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StructFileGrammarListener ) ((StructFileGrammarListener)listener).exitContent1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StructFileGrammarVisitor ) return ((StructFileGrammarVisitor<? extends T>)visitor).visitContent1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			setState(244);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Content1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(227);
				variableDef();
				setState(228);
				tk_semicolon();
				}
				break;
			case 2:
				_localctx = new Content2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(230);
				variableAsign();
				setState(231);
				tk_semicolon();
				}
				break;
			case 3:
				_localctx = new Content3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(233);
				functionDef();
				}
				break;
			case 4:
				_localctx = new Content4Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(234);
				functionCall();
				setState(235);
				tk_semicolon();
				}
				break;
			case 5:
				_localctx = new Content5Context(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(237);
				structures();
				}
				break;
			case 6:
				_localctx = new Content6Context(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(238);
				return_call();
				setState(239);
				tk_semicolon();
				}
				break;
			case 7:
				_localctx = new Content7Context(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(241);
				expression(0);
				setState(242);
				tk_semicolon();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
